# Francesco-Palmisano

./: filefile.txt
esercitazione1/: CMakeLists.txt  mediatemp.cpp
esercitazione2/: CMakeLists.txt  esercizio2.cpp
esercitazione3/: CMakeLists.txt  rational.hpp
esercitazione4/: CMakeLists.txt  sort.hpp  test_bubble.cpp  test_insertion.cpp  test_selection.cpp  timer_sort.cpp
esercitazione5/: CMakeLists.txt  Note.txt  sort.hpp  test_bubble.cpp  test_insertion.cpp  test_mergesort.cpp  test_quickinsertionsort.cpp  test_quicksort.cpp  test_selection.cpp  timer_sort.cpp
esercitazione8/: CMakeLists.txt  edge.hpp  graph.hpp  main.cpp
